<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="780dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/background_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/app_name"
                android:textColor="@color/text_no_action_color"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tv_search"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:drawableStart="@drawable/ic_search"
                android:focusable="auto"
                android:background="@drawable/rounder_edittext"
                android:hint="@string/find_music"
                android:importantForAutofill="no"
                android:textAlignment="center"
                android:textColor="@color/text_no_action_color"
                android:textColorHint="@color/text_not_in_focus"
                android:textSize="20sp"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/tv_setting"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:background="@drawable/ic_more_setting" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@color/background_color"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/songs_tv"
                android:layout_width="60dp"
                android:layout_height="28dp"
                android:layout_marginStart="20dp"
                android:onClick="showListFragment"
                android:text="@string/song_tv"
                android:textColor="@color/text_not_in_focus" />

            <TextView
                android:id="@+id/playlist_tv"
                android:layout_width="60dp"
                android:layout_height="28dp"
                android:layout_marginStart="20dp"
                android:onClick="showPlayListFragment"
                android:text="@string/playlist_tv"
                android:textColor="@color/text_not_in_focus" />

            <TextView
                android:id="@+id/artist_tv"
                android:layout_width="60dp"
                android:layout_height="28dp"
                android:layout_marginStart="20dp"
                android:onClick="showArtistFragment"
                android:text="@string/artist_tv"
                android:textColor="@color/text_not_in_focus" />

            <TextView
                android:id="@+id/album_tv"
                android:layout_width="60dp"
                android:layout_height="28dp"
                android:layout_marginStart="20dp"
                android:onClick="showAlbumFragment"
                android:text="@string/album_tv"
                android:textColor="@color/text_not_in_focus" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/main_container_fl"
            android:layout_width="match_parent"
            android:layout_height="560dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center" />
    </LinearLayout>

    <include layout="@layout/botom_curren_song_navigation" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>